gateway-api/v1-db.yaml
---
# DB SERVICE
apiVersion: v1
kind: Service
metadata:
  name: mysql-v1
  namespace: gateway-api-assignment
spec:
  selector:
    app: mysql-v1 # Corresponds to the label in db-deployment.yaml-v2
  type: ClusterIP
  ports:
  - name: mysql-v1
    protocol: TCP
    port: 3306
    targetPort: 3306
---
# DB DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mysql-v1
  namespace: gateway-api-assignment # Same application stack as wordpress.
  labels:
    app:  mysql-v1
spec:
  selector:
    matchLabels:
      app: mysql-v1
  replicas: 1
  template:
    metadata:
      labels:
        app:  mysql-v1
    spec:
      containers:
      - name:  mysql-v1
        image:  mysql:5.7
        ports:
        - containerPort:  3306
          name:  mysql-v1
        env: # The environment variables should match to the ones of the wordpress pod.
        - name: MYSQL_ROOT_PASSWORD
          value: t
        - name: MYSQL_DATABASE
          value: wordpress
        - name: MYSQL_USER
          value: wordpress
        - name: MYSQL_PASSWORD
          value: wordpress
        volumeMounts:
        - name: mysql-v1-persistent-storage # Mount the volume form below to the current pod.
          mountPath: /var/lib/mysql
      volumes: # Links PVC and PV.
      - name: mysql-v1-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-v1 # Corresponds to the name in pvc.yaml
