gateway-api/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: wordpress-v1-db
  namespace: gateway-api-assignment

spec:
  parentRefs:
    - name: traefik-gateway
      # sectionName: tcp
      # kind: Gateway
      namespace: traefik
  rules:
     - backendRefs:
        - name: mysql-v1
          namespace: gateway-api-assignment
          port: 3306
